scripts/nullaway/original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8.txt
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/Scene.java:23: error: [NullAway] initializer method does not guarantee @NonNull field defaultCamera (line 19) is initialized along all control-flow paths (remember to check for exceptions or early returns).
  public Scene() {
         ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/Scene.java:25: error: [NullAway] assigning @Nullable expression to @NonNull field
    defaultCamera = null;
                  ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/Camera.java:47: error: [NullAway] initializer method does not guarantee @NonNull fields lowerLeftCorner (line 26), upperRightCorner (line 27), widthOffset (line 33), heightOffset (line 34) are initialized along all control-flow paths (remember to check for exceptions or early returns).
  public Camera(Vector3 eyePoint,Vector3 lookAtPoint,Vector3 upDirection) {
         ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/Camera.java:201: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return(ray);
    ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ImagePack/Image.java:53: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
      RGBEFormat.write(this,null,null,filename);
                            ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ImagePack/Image.java:53: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
      RGBEFormat.write(this,null,null,filename);
                                 ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ImagePack/Image.java:88: error: [NullAway] returning @Nullable expression from method with @NonNull return type
      return(null);
      ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/PathNode.java:23: error: [NullAway] initializer method does not guarantee @NonNull field primitive (line 14) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public PathNode() {
           ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/PathNode.java:25: error: [NullAway] assigning @Nullable expression to @NonNull field
        primitive = null;
                  ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/SceneBuilder.java:54: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
      primitive = new Primitive((GeometricObject)collection.elementAt(i), white, null);
                                                                                 ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/SceneBuilder.java:59: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
    primitive = new Primitive(new Rectangle(d,c,g,h), white, null);
                                                             ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/SceneBuilder.java:62: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
    primitive = new Primitive(new Rectangle(f,e,h,g), white, null);
                                                             ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/SceneBuilder.java:65: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
    primitive = new Primitive(new Rectangle(a,d,h,e), softred, null);
                                                               ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/SceneBuilder.java:68: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
    primitive = new Primitive(new Rectangle(c,b,f,g), softblue, null);
                                                                ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/SceneBuilder.java:91: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
    primitive = new Primitive(new Rectangle(a,b,f,e),softyellow,null);
                                                                ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/SceneBuilder.java:93: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
    primitive = new Primitive(new Rectangle(b,c,g,f),softyellow,null);
                                                                ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/SceneBuilder.java:95: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
    primitive = new Primitive(new Rectangle(f,g,h,e),softyellow,null);
                                                                ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/SceneBuilder.java:97: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
    primitive = new Primitive(new Rectangle(d,h,g,c),softyellow,null);
                                                                ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/SceneBuilder.java:99: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
    primitive = new Primitive(new Rectangle(d,a,e,h),softyellow,null);
                                                                ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/SceneBuilder.java:111: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
    primitive = new Primitive(new Rectangle(a,b,f,e),softgreen,null);
                                                               ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/SceneBuilder.java:113: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
    primitive = new Primitive(new Rectangle(b,c,g,f),softgreen,null);
                                                               ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/SceneBuilder.java:115: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
    primitive = new Primitive(new Rectangle(f,g,h,e),softgreen,null);
                                                               ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/SceneBuilder.java:117: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
    primitive = new Primitive(new Rectangle(d,h,g,c),softgreen,null);
                                                               ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ScenePack/SceneBuilder.java:119: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
    primitive = new Primitive(new Rectangle(d,a,e,h),softgreen,null);
                                                               ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/Material/DiffuseEmission.java:18: error: [NullAway] initializer method does not guarantee @NonNull field radiance (line 10) is initialized along all control-flow paths (remember to check for exceptions or early returns).
  public DiffuseEmission(double redPower,double greenPower,double bluePower) {
         ^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ImagePack/RGBEFormat.java:18: error: [NullAway] @NonNull static field rgbData not initialized
  private static float[]		rgbData;
                        		^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ImagePack/RGBEFormat.java:19: error: [NullAway] @NonNull static field rgbeData not initialized
  private static byte[]			rgbeData;
                       			^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ImagePack/RGBEFormat.java:20: error: [NullAway] @NonNull static field gamma not initialized
  private static Double			gamma;
                       			^
    (see http://t.uber.com/nullaway )
../original/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ImagePack/RGBEFormat.java:21: error: [NullAway] @NonNull static field exposure not initialized
  private static Double			exposure;
                       			^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
29 errors
